bridge/base/0-healthcare-platform-namespace.yaml
#! 0-healthcare-platform-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: healthcare-platform
    labels:
        com.docker.compose.project: healthcare-platform
