bridge/base/api-gateway-deployment.yaml
#! api-gateway-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-gateway
    namespace: healthcare-platform
    labels:
        com.docker.compose.project: healthcare-platform
        com.docker.compose.service: api-gateway
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: healthcare-platform
            com.docker.compose.service: api-gateway
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: healthcare-platform
                com.docker.compose.service: api-gateway
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: api-gateway
                  image: healthcare-platform-api-gateway
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - node -e "require('http').get('http://127.0.0.1:3000/health', (r) => process.exit(r.statusCode === 200 ? 0: 1)).on('error', () => process.exit(1))"
                    periodSeconds: 15
                    initialDelaySeconds: 25
                    timeoutSeconds: 5
                    failureThreshold: 10
                  ports:
                    - name: api-gatewa-3000
                      containerPort: 3000
