bridge/base/mongo-deployment.yaml
#! mongo-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo
    namespace: healthcare-platform
    labels:
        com.docker.compose.project: healthcare-platform
        com.docker.compose.service: mongo
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: healthcare-platform
            com.docker.compose.service: mongo
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: healthcare-platform
                com.docker.compose.service: mongo
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: healthcare-mongo
                  image: mongo:7
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - mongosh --quiet --eval "db.adminCommand('ping').ok" | grep 1 >/dev/null 2>&1
                    periodSeconds: 10
                    initialDelaySeconds: 20
                    timeoutSeconds: 5
                    failureThreshold: 10
                  ports:
                    - name: mongo-27017
                      containerPort: 27017
                  volumeMounts:
                    - name: data-db
                      mountPath: /data/db
            volumes:
                - name: data-db
                  persistentVolumeClaim:
                    claimName: mongo-mongo-data
