bridge/base/api-gateway-expose.yaml
#! api-gateway-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-gateway
    namespace: healthcare-platform
    labels:
        com.docker.compose.project: healthcare-platform
        com.docker.compose.service: api-gateway
spec:
    selector:
        com.docker.compose.project: healthcare-platform
        com.docker.compose.service: api-gateway
    ports:
        - name: api-gatewa-3000
          port: 3000
          targetPort: api-gatewa-3000
