bridge/base/appointment-service-expose.yaml
#! appointment-service-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: appointment-service
    namespace: healthcare-platform
    labels:
        com.docker.compose.project: healthcare-platform
        com.docker.compose.service: appointment-service
spec:
    selector:
        com.docker.compose.project: healthcare-platform
        com.docker.compose.service: appointment-service
    ports:
        - name: appointmen-3003
          port: 3003
          targetPort: appointmen-3003
