bridge/base/client-service.yaml
#! client-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: client-published
    namespace: healthcare-platform
    labels:
        com.docker.compose.project: healthcare-platform
        com.docker.compose.service: client
spec:
    selector:
        com.docker.compose.project: healthcare-platform
        com.docker.compose.service: client
    ports:
        - name: client-8081
          port: 8081
          protocol: TCP
          targetPort: client-80

# check if there is at least one published port
