bridge/base/doctor-service-service.yaml
#! doctor-service-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: doctor-service-published
    namespace: healthcare-platform
    labels:
        com.docker.compose.project: healthcare-platform
        com.docker.compose.service: doctor-service
spec:
    selector:
        com.docker.compose.project: healthcare-platform
        com.docker.compose.service: doctor-service
    ports:
        - name: doctor-ser-3002
          port: 3002
          protocol: TCP
          targetPort: doctor-ser-3002

# check if there is at least one published port
